apps/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: homelab
  annotations:
    glance/icon: di:n8n
    glance/name: "n8n"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      nodeSelector:
        kubernetes.io/hostname: "realtong-server"
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:2.17.0
          ports:
            - containerPort: 5678
          volumeMounts:
            - name: n8n-data
              mountPath: /home/node/.n8n
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
      volumes:
        - name: n8n-data
          persistentVolumeClaim:
            claimName: n8n-pvc
